snapshot-tests/tests/snapshots/de__nested_unexpected_key.snap
---
source: snapshot-tests/tests/de.rs
expression: error
---
error[UnexpectedKey]: unexpected key at component.servers[1].config.bogus
   ┌─ nested_unexpected_key:11:1
   │
11 │ bogus = true
   │ ^^^^^ unexpected key
